syntax = "proto3";
package protofiles;

import "google/protobuf/timestamp.proto";

option go_package = "./";

message LoraRequest {
  int32      idDevice        =    1;  
  int32      id              =    2;
  int32      input1          =    3;
  int32      input2          =    4;
  int32      output          =    5;
  bool       alarm_battery   =    6;
  bool       alarm_power     =    7;
  bool       sensor_error    =    8;
  repeated   Sensor  sensors =    9;
  google.protobuf.Timestamp   lastUpdated     =    10;    


  message Sensor {
    int32   type    = 1;
    float      value  = 2;
  }
}

message LoraResponse {
    string msg =1;
    bool     confirmation = 2;
}

message ListLoraRequest {
  repeated   LoraRequest  listDevice = 1;
}

message ListLoraResponse {
    string msg =1;
    bool     confirmation = 2;
}

service LoraTransaction {
  rpc MakeTransaction(LoraRequest) returns (LoraResponse) {}
}

service ListLoraTransaction {
  rpc MakeListTransaction(ListLoraRequest) returns (ListLoraResponse) {}
}